# access-pdp

./: .gitignore  .golangci.yaml  Dockerfile  LICENSE  Makefile  README.md  access-pdp-examples_test.go  access-pdp.go  access-pdp_test.go  go.mod  go.sum  server.go  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  publish.yaml  release.yaml
attributes/: README.md  attributeclustering.go  attributeclustering_test.go  attributedefinition.go  attributeinstance.go
clients/accesspdp-client-python/: pyproject.toml
clients/accesspdp_client_python/: pyproject.toml
clients/python/: Pipfile  README.md  pyproject.toml  requirements.txt
clients/python/accesspdp/: pyproject.toml
clients/python/accesspdp/src/accesspdp/v1/: accesspdp_pb2.py  accesspdp_pb2_grpc.py
clients/python/accesspdp/src/v1/: accesspdp_pb2.py  accesspdp_pb2_grpc.py
clients/python/attributes/: pyproject.toml
clients/python/attributes/src/v1/: attributes_pb2.py
clients/python/src/accesspdp_client/accesspdp/v1/: __init__.py
grpc-clients/python/accesspdp/v1/: accesspdp_pb2.py
grpc-clients/python/attributes/v1/: attributes_pb2.py
pdp/: access-pdp-examples_test.go  access-pdp.go  access-pdp_test.go
proto/: Makefile  buf.gen.go.yaml  buf.gen.python.accesspdp.yaml  buf.gen.python.attributes.yaml  buf.gen.yaml  buf.yaml  gen-python.sh
proto/accesspdp/: accesspdp.pb.go  accesspdp.proto  accesspdp_grpc.pb.go
proto/accesspdp/v1/: accesspdp.pb.go  accesspdp.proto  accesspdp_grpc.pb.go
proto/attributes/: attributes.pb.go  attributes.proto
proto/attributes/v1/: attributes.pb.go  attributes.proto
proto/opentdf/accesspdp/: accesspdp.proto
proto/opentdf/attributes/: attributes.proto
protoconv/: protobufconv.go  protobufconv_test.go
