[project]
name = "accesspdp"
version = "0.0.1"
authors = [
  { name="Virtru", email="support@virtru.com" },
]
description = "A Python gRPC client for Virtru's Access PDP"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3 Clause",
    "Operating System :: OS Independent",
]

dependencies = [
  'grpcio',
  'protobuf',
  # this package also depends on sister project `attributes`, but you can't
  # reference a git repo as a direct dependency here (even though other Python tools can and PEP 508 supports it)
  # thanks to this bug: https://github.com/pypa/pip/issues/10216
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
