[project]
name = "attributes"
version = "0.0.1"
authors = [
  { name="Virtru", email="support@virtru.com" },
]
description = "Python protobuf definitions for OpenTDF ABAC attributes"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
license_expression = "BSD-3-Clause"

dependencies = [
  'grpcio',
  'protobuf',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
